# ChangeLog for app-accessibility/dasher
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/dasher/ChangeLog,v 1.14 2004/07/23 22:17:52 lv Exp $

  23 Jul 2004; Travis Tilley <lv@gentoo.org> dasher-3.2.10-r1.ebuild:
  stable on amd64

  01 Jul 2004; Aron Griffis <agriffis@gentoo.org> dasher-3.2.10-r1.ebuild:
  add ~alpha

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> dasher-3.2.4.ebuild:
  sync IUSE (-nls)

  30 May 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.10-r1.ebuild:
  Marked stable on x86.

  25 May 2004; David Holm <dholm@gentoo.org> dasher-3.2.10-r1.ebuild:
  Readded to ~ppc.

  24 May 2004; Jon Portnoy <avenj@gentoo.org> dasher-3.2.10-r1.ebuild :
  AMD64 keywords to fix GNOME repoman report.

*dasher-3.2.10-r1 (11 May 2004)

  11 May 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.10-r1.ebuild,
  files/dasher-3.2.10-glade_fix.patch:
  Revision bump, including a patch that fixes the color preferences widget.

*dasher-3.2.10 (28 Apr 2004)

  28 Apr 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.10.ebuild:
  New release.

  23 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> dasher-3.2.4.ebuild:
  Fixed IUSE.

  18 Apr 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.4.ebuild:
  Added scrollkeeper dependecy. Thanks to Daniel Rendall for his help on
  bug #47824.

  12 Apr 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.4.ebuild:
  Marked stable on x86.

  20 Mar 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.1.ebuild:
  Marked stable on x86.

  13 Mar 2004; foser <foser@gentoo.org> metadata.xml :
  Maintainership to gnome-accessibility

*dasher-3.2.4 (10 Mar 2004)

  10 Mar 2004; L. Boshell <leonardop@gentoo.org> dasher-3.2.4.ebuild:
  New release. Misc ebuild cleanups.

*dasher-3.2.1 (14 Dec 2003)

  14 Dec 2003; Mike Gardiner <obz@gentoo.org> dasher-3.0.0.ebuild,
  dasher-3.2.1.ebuild: