@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.118 2004/07/31 03:55:37 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.119 2004/08/05 20:20:18 gmsoft Exp $
+
+  05 Aug 2004; Guy Martin <gmsoft@gentoo.org> gnome-2.6.2-r1.ebuild:
+  Stable on hppa.
 
   31 Jul 2004; <spider@gentoo.org> gnome-2.6.2-r1.ebuild:
   stable on x86
