@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/nautilus-cd-burner
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/Attic/ChangeLog,v 1.36 2004/07/31 03:36:18 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/Attic/ChangeLog,v 1.37 2004/08/05 20:18:43 gmsoft Exp $
+
+  05 Aug 2004; Guy Martin <gmsoft@gentoo.org> nautilus-cd-burner-2.6.1.ebuild:
+  Stable on hppa.
 
   31 Jul 2004; <spider@gentoo.org> nautilus-cd-burner-2.6.1.ebuild:
   stable on x86 for gnome 2.6.2
