@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/dasher
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/dasher/ChangeLog,v 1.14 2004/07/23 22:17:52 lv Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/dasher/ChangeLog,v 1.15 2004/08/05 20:17:23 gmsoft Exp $
+
+  05 Aug 2004; Guy Martin <gmsoft@gentoo.org> dasher-3.2.10-r1.ebuild:
+  Stable on hppa.
 
   23 Jul 2004; Travis Tilley <lv@gentoo.org> dasher-3.2.10-r1.ebuild:
   stable on amd64
